fixed layout shifts

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -5,6 +5,11 @@
 @container-xsmall-max-width: 600px;
 
 // Custom
+html {
+    overflow-y: scroll;
+    overflow-x: hidden
+}
+
 table {
     &:extend(.uk-table all, .uk-table-small all, .uk-table-divider all);
 }
